# gedeair_backend

./: .env.dev.example  .env.example  .env.prod.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: docker.yml  rust.yml
entity/: Cargo.toml
entity/src/: game.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: lib.rs  macro.rs
service/src/mutation/: game.rs  mod.rs  user.rs
service/src/query/: game.rs  mod.rs  user.rs
service/tests/: game_test.rs  prepare.rs
src/: cli.rs  error.rs  lib.rs  main.rs  oidc.rs  openapi.rs  state.rs
src/artifact/: mod.rs
src/artifact/response/: user_response.rs
src/extractors/: admin.rs  mod.rs  oidc_user.rs  user.rs
src/handlers/: app_error.rs  mod.rs
src/models/: file.rs  mod.rs
src/models/profile/: admin.rs  user.rs
src/models/request/: mod.rs
src/models/response/: mod.rs
src/route/: mod.rs  user.rs
src/routes/: mod.rs
src/routes/user/: mod.rs
src/routes/utils/: login.rs  logout.rs  mod.rs  openapi.rs  status.rs  upload.rs
tests/: base_tests.rs  basics_tests.rs  misc_tests.rs  prepare.rs
tests/utils/: mod.rs
