[package]
name = "gedeair_backend"
version = "0.0.1"
edition = "2021"

# Enable high optimizations for dependencies:
[profile.dev.package."*"]
opt-level = 3

# Git hooks
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]

[dev-dependencies]
tower = { version = "0.4.13" }
http-body-util = { version = "0.1.0" }

[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.36.0", features = ["full"] }
