[package]
name = "gedeair_backend"
version = "0.0.1"
edition = "2021"

# Enable high optimizations for dependencies:
[profile.dev.package."*"]
opt-level = 3

# Git hooks
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]

[dev-dependencies]
tower = { version = "0.4.13" }
http-body-util = { version = "0.1.0" }
serde_json = { version = "1.0.114" }

[dependencies]
axum = { version = "0.7.4" }
tokio = { version = "1.36.0", features = ["full"] }

# Trace + Log
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

# OpenAPI
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }

# CLI + Env + Config file
clap = { version = "4.5.1", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
